--- a/index.html
+++ b/index.html
@@ -6,22 +6,24 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Libre+Barcode+39+Extended+Text" rel="stylesheet">
     <title>Document</title>
 </head>
-<body Background = "https://pixabay.com/get/e836b30a2ef1073ed1534705fb0938c9bd22ffd41cb2124996f1c37daf/watercolour-1325656_1920.jpg?attachment, https://pixabay.com/en/watercolour-gradient-1325656/">
+<body>
+  <br><br><br><br><br>
     <div class="container">
-      <br></br><br></br><br></br><br></br><br></br>
         <div class="name">
             <h1>Comparify</h1>
         </div>
-        <br></br><br></br>
+</br></br></br></br>
+        <br>
         <div class="search">
             <input type="text" placeholder="Search...">
             <button class="button"><i class="fas fa-search"></i></button>
+        </br>
         </div>
-        <br></br><br></br><br></br>
         <div class="quote">
-          <h3>shop cheap!<h3>
+          <h3>Shop Cheap!<h3>
         </div>
     </div>
 
