Added content in the results page

--- a/Display_Page.html
+++ b/Display_Page.html
@@ -2,9 +2,15 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Results Page</title>
+    <link rel="stylesheet" href="Results_style.css">
   </head>
   <body>
-    
+    <div class = "container">
+    <div class = "wrapper">
+       <div class = "box A"></div>
+       <div class = "box B"></div>
+    </div>
+  </div>
   </body>
 </html>
