--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
     <title>Document</title>
 </head>
-<body Background = "https://pixabay.com/get/e836b30a2ef1073ed1534705fb0938c9bd22ffd41cb2124996f1c37daf/watercolour-1325656_1920.jpg?attachment, https://pixabay.com/en/watercolour-gradient-1325656/">
+<body Background = "https://pixabay.com/en/watercolour-gradient-1325656/">
     <div class="container">
       <br></br><br></br><br></br><br></br><br></br>
         <div class="name">
@@ -19,7 +19,7 @@
             <input type="text" placeholder="Search...">
             <button class="button"><i class="fas fa-search"></i></button>
         </div>
-        <br></br><br></br><br></br>
+        <br></br><br></br><br>zs
         <div class="quote">
           <h3>shop cheap!<h3>
         </div>
